--- a/app/project1/webapp/view/FinListDetails.view.xml
+++ b/app/project1/webapp/view/FinListDetails.view.xml
@@ -24,16 +24,20 @@
                     level="H2"
                 />
                 <m:ToolbarSpacer />
-                <!-- <m:Button
-                    icon="sap-icon://edit"
-                    type="Transparent"
-                    press="onEdit"
-                    ariaLabelledBy="editButtonLabel"
-                /> -->
+                
             </m:Toolbar>
         </m:customHeader>
         <!-- this CSS class add a standard spacing to all the page content -->
         <m:content>
+                <m:FlexBox justifyContent="End" width="100%" >
+        <!-- Content on the left side (if any) -->
+        <m:Button 
+         icon="sap-icon://edit"
+                    type="Transparent"
+                    press="onEdit"
+                    ariaLabelledBy="editButtonLabel"
+                    class="sapUiSmallMarginBegin" />
+    </m:FlexBox>
             <m:ObjectHeader
                 id="idPage"
                 responsive="true"
@@ -46,11 +50,7 @@
                 class="sapUiResponsivePadding--header"
                 
             >
-            	<!-- <m:ObjectAttribute
-			title="IT Department Status"
-			text="{/employee/itStatus}"/> -->
-
-                <m:statuses>
+              <m:statuses>
 
                        <m:ObjectStatus
                         title="Onboarding Status"
@@ -79,16 +79,7 @@
                     <m:IconTabFilter
                         key="empStatus"
                         text="General"
-                    >
-                          <m:FlexBox justifyContent="End" width="100%" >
-        <!-- Content on the left side (if any) -->
-        <m:Button 
-         icon="sap-icon://edit"
-                    type="Transparent"
-                    press="onEdit"
-                    ariaLabelledBy="editButtonLabel"
-                    class="sapUiSmallMarginBegin" />
-    </m:FlexBox>
+                    >                  
                         <f:SimpleForm layout="ResponsiveGridLayout">
                             <f:title>
                                 <core:Title text="Employee Details" />
@@ -102,17 +93,10 @@
                             <m:Label text="Address" />
                             <m:Text text="{employee>address},{employee>city}" />
                             <m:Label text="State/Pincode" />
-                            <m:Text text="{employee>state},{employee>pincode}" />
-                            <!-- <m:Label text="Position" />
-                            <m:Text text="{employee>position}" /> -->
-                            <!-- <m:Label text="Department" />
-                            <m:Text text="{employee>department}" /> -->
+                            <m:Text text="{employee>state},{employee>pincode}" />                           
                             <m:Label text="Salary Details" />
                             <m:Text text="{employee>salaryDetails}" />
-                            <!-- <m:Label text="Laptop Required" />
-                            <m:Text text="{employee>laptop}" />
-                            <m:Label text="Mouse Required" />
-                            <m:Text text="{employee>mouse}" /> -->
+                           
                         </f:SimpleForm>
                     </m:IconTabFilter>
                     <m:IconTabFilter
@@ -227,22 +211,22 @@
                         key="comments"
                         text="Comments"
                     >
-                        <m:FeedInput
+	<m:FeedInput
 		post="onPost"
-		icon="test-resources/sap/m/images/dronning_victoria.jpg"
+		
 		class="sapUiSmallMarginTopBottom" />
 	<m:List
 		showSeparators="Inner"
-		items="{feedModel>/EntryCollection}" >
+		items="{employee>Comment}" >
 		<m:FeedListItem
-			sender="{feedModel>Author}"
-			icon="{feedModel>AuthorPicUrl}"
+			sender="{employee>author}"
+			icon="{employee>authorPicUrl}"
 			senderPress="onSenderPress"
 			iconPress="onIconPress"
 			
-			info="{feedModel>Type}"
-			timestamp="{feedModel>Date}"
-			text="{feedModel>Text}"
+			info="{employee>type}"
+			timestamp="{employee>Date}"
+			text="{employee>comment}"
 			convertLinksToAnchorTags="All"/>
 	</m:List>
                     </m:IconTabFilter>
