--- a/app/project1/webapp/view/HeadHrListDetails.view.xml
+++ b/app/project1/webapp/view/HeadHrListDetails.view.xml
@@ -24,16 +24,20 @@
                     level="H2"
                 />
                 <m:ToolbarSpacer />
-                <!-- <m:Button
-                    icon="sap-icon://edit"
-                    type="Transparent"
-                    press="onEdit"
-                    ariaLabelledBy="editButtonLabel"
-                /> -->
+                
             </m:Toolbar>
         </m:customHeader>
         <!-- this CSS class add a standard spacing to all the page content -->
         <m:content>
+                  <m:FlexBox justifyContent="End" width="100%" >
+        <!-- Content on the left side (if any) -->
+        <m:Button 
+         icon="sap-icon://edit"
+                    type="Transparent"
+                    press="onEdit"
+                    ariaLabelledBy="editButtonLabel"
+                    class="sapUiSmallMarginBegin" />
+    </m:FlexBox>
             <m:ObjectHeader
                 id="idPage"
                 responsive="true"
@@ -46,11 +50,7 @@
                 class="sapUiResponsivePadding--header"
                 
             >
-            	<!-- <m:ObjectAttribute
-			title="IT Department Status"
-			text="{/employee/itStatus}"/> -->
-
-                <m:statuses>
+            <m:statuses>
 
                        <m:ObjectStatus
                         title="Onboarding Status"
@@ -59,14 +59,6 @@
                     />
                     
                 </m:statuses>
-                
-                   <!-- <m:statuses>
-                    <m:ObjectStatus
-                        title="Onboarding Status"
-                        text="{employee>status}"
-                        state="{= ${employee>status} === 'Approve' ? 'Success' : ${employee>status} === 'Pending' ? 'Warning' : 'Error' }"
-                    />
-                </m:statuses> -->
                 <m:statuses>
                     <m:ObjectStatus
                         title="IT Status"
@@ -108,49 +100,42 @@
                         key="empStatus"
                         text="General"
                     >
-                          <m:FlexBox justifyContent="End" width="100%" >
-        <!-- Content on the left side (if any) -->
-        <m:Button 
-         icon="sap-icon://edit"
-                    type="Transparent"
-                    press="onEdit"
-                    ariaLabelledBy="editButtonLabel"
-                    class="sapUiSmallMarginBegin" />
-    </m:FlexBox>
+                
                         <f:SimpleForm layout="ResponsiveGridLayout">
                             <f:title>
-                                <core:Title text="Employee Details" />
+                                <core:Title text="Employee Details"/>
                             </f:title>
-                            <m:Label text="Employee name" />
-                            <m:Text text="{employee>name}" />
-                            <m:Label text="Mobile number" />
-                            <m:Text text="{employee>mobileNumber}" />
-                            <m:Label text="Email ID" />
-                            <m:Text text="{employee>email}" />
-                            <m:Label text="Address" />
-                            <m:Text text="{employee>address},{employee>city}" />
-                            <m:Label text="State/Pincode" />
-                            <m:Text text="{employee>state},{employee>pincode}" />
-                            <m:Label text="Position" />
-                            <m:Text text="{employee>position}" />
-                            <m:Label text="Department" />
-                            <m:Text text="{employee>department}" />
-                            <m:Label text="Salary Details" />
-                            <m:Text text="{employee>salaryDetails}" />
-                            <m:Label text="Laptop Required" />
-                            <m:Text text="{employee>laptop}" />
-                            <m:Label text="Mouse Required" />
-                            <m:Text text="{employee>mouse}" />
+                            <m:Label text="Employee name"/>
+                            <m:Text text="{employee>name}"/>
+                            <m:Label text="Mobile number"/>
+                            <m:Text text="{employee>mobileNumber}"/>
+                            <m:Label text="Email ID"/>
+                            <m:Text text="{employee>email}"/>
+                            <m:Label text="Address"/>
+                            <m:Text text="{employee>address},{employee>city}"/>
+                            <m:Label text="State/Pincode"/>
+                            <m:Text text="{employee>state},{employee>pincode}"/>
+                            <m:Label text="Position"/>
+                            <m:Text text="{employee>position}"/>
+                            <m:Label text="Department"/>
+                            <m:Text text="{employee>department}"/>
+                            <m:Label text="Salary Details"/>
+                            <m:Text text="{employee>salaryDetails}"/>
+                            <m:Label text="Laptop Required"/>
+                            <m:Text text="{employee>laptop}"/>
+                            <m:Label text="Mouse Required"/>
+                            <m:Text text="{employee>mouse}"/>
                         </f:SimpleForm>
                     </m:IconTabFilter>
+
+
+ <!-- ///////////////////////Network Graph Section////////////////////////////// -->
+
                     <m:IconTabFilter
                         key="netwaorkGraph"
                         text="WorkFlow"
                     >
-                        <!-- ///////////////////////Network Graph Section////////////////////////////// -->
-
-
-     <Graph
+                    <Graph
                             id="graph"
                             enableWheelZoom="false"
                         >
@@ -199,113 +184,67 @@
                             <lines>
                                 <Line
                                     from="EmployeeStatus"
-                                    to="JHRStatus"
-                                    
+                                    to="JHRStatus"                                    
                                 />
-
                                 <Line
                                     from="JHRStatus"
                                     to="FinanceStatus"
-                                   
                                 />
                                 <Line
                                     from="JHRStatus"
                                     to="ITStatus"
-                                    
                                 />
                                 <Line
                                     from="JHRStatus"
                                     to="TLStatus"
-                                    
                                 />
-
                                 <Line
                                     from="FinanceStatus"
                                     to="HeadHRStatus"
-                                   
                                 />
                                 <Line
                                     from="ITStatus"
                                     to="HeadHRStatus"
-                                    
-                                />
+                                 />
                                 <Line
                                     from="TLStatus"
                                     to="HeadHRStatus"
-                                    
                                 />
-
                                 <Line
                                     from="JHRStatus"
                                     to="HeadHRStatus"
-                                    
                                 />
                             </lines>
                         </Graph>
-
-
-
-
+</m:IconTabFilter>
 
 <!-- ///////////////////////Network Graph Section////////////////////////////// -->
-                    </m:IconTabFilter>
+                   
                     <m:IconTabFilter
                         key="comments"
                         text="Comments"
                     >
-                        <m:FeedInput
+	<m:FeedInput
 		post="onPost"
-		icon="test-resources/sap/m/images/dronning_victoria.jpg"
+		
 		class="sapUiSmallMarginTopBottom" />
 	<m:List
 		showSeparators="Inner"
-		items="{feedModel>/EntryCollection}" >
+		items="{employee>Comment}" >
 		<m:FeedListItem
-			sender="{feedModel>Author}"
-			icon="{feedModel>AuthorPicUrl}"
+			sender="{employee>author}"
+			icon="{employee>authorPicUrl}"
 			senderPress="onSenderPress"
 			iconPress="onIconPress"
-			
-			info="{feedModel>Type}"
-			timestamp="{feedModel>Date}"
-			text="{feedModel>Text}"
+			info="{employee>type}"
+			timestamp="{employee>Date}"
+			text="{employee>comment}"
 			convertLinksToAnchorTags="All"/>
 	</m:List>
                     </m:IconTabFilter>
                 </m:items>
             </m:IconTabBar>
 
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-            <!-- <f:SimpleForm
-				layout="ResponsiveGridLayout"
-				class="sapUiForceWidthAuto sapUiResponsiveMargin" >
-				<f:title>
-					<core:Title text="A Form ugdgdgjdgkd" />
-				</f:title>
-				<Label text="Label"/>
-				<Text text="Value"/>
-			</f:SimpleForm> -->
-            <!-- <List headerText="A List " backgroundDesign="Translucent" width="auto" class="sapUiResponsiveMargin"/> -->
-            <!-- <Table headerText="A Table" width="auto" class="sapUiResponsiveMargin"/>
-			<Panel headerText="A Panel" width="auto" class="sapUiResponsiveMargin"/> -->
         </m:content>
     </m:Page>
 </mvc:View>
